# google-auth-bot

./: .dockerignore  LICENSE  Makefile  go.mod  go.sum
api/: totp.proto  user.proto
cmd/microservice-api/: main.go
config/: api.env.example
deploy/: api_compose.yaml
internal/microservice-api/config/: config.go  flags.go
internal/microservice-api/database/: functions.go  init.go  models.go
internal/microservice-api/grpc-server/: grpc.go
internal/microservice-api/grpc-server/routes/: totp.go  user.go
internal/microservice-api/logger/: logger.go
internal/microservice-api/proto/: totp.pb.go  totp_grpc.pb.go  user.pb.go  user_grpc.pb.go
tests/: Makefile  main.py  pyproject.toml  totp_pb2.py  totp_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
